# src

./: .gitignore  README.md
code/mrpt/lidar_SC/: CMakeLists.txt  ReadMe
code/mrpt/lidar_SC/config/: icp-slam-live_demo_RPLIDAR_gridmap.ini
code/mrpt/lidar_SC/include/mrpt/: examples_config.h  mathEEE.h
code/mrpt/lidar_SC/include/mrpt/math/: CSparseMatrix.h
code/mrpt/lidar_SC/lib/: libmrpt-detectors.so.1.5.6  libmrpt-graphs.so.1.5  libmrpt-graphs.so.1.5.6  libmrpt-graphslam.so.1.5  libmrpt-graphslam.so.1.5.6  libmrpt-hwdrivers.so.1.5  libmrpt-hwdrivers.so.1.5.6  libmrpt-kinematics.so.1.5  libmrpt-kinematics.so.1.5.6  libmrpt-maps.so.1.5  libmrpt-maps.so.1.5.6  libmrpt-nav.so.1.5  libmrpt-obs.so.1.5  libmrpt-obs.so.1.5.6  libmrpt-opengl.so.1.5  libmrpt-slam.so.1.5.6  libmrpt-tfest.so.1.5.6  libmrpt-vision.so.1.5
code/mrpt/lidar_SC/libmrpt/: CMakeLists.txt
code/mrpt/lidar_SC/src/: CMakeLists.txt  readme
code/mrpt/lidar_SC/src/lidar_Ho/: LGlidar.cpp
code/mrpt/lidar_SC/src/lidar_SC/: LGlidar.cpp  LGlidar.h
code/mrpt/lidar_SC/src/socket/: CMakeLists.txt  socket_test.cpp
code/mrpt/lidar_SC_client/include/: robot.h
code/mrpt/lidar_SC_client/include/mrpt/: config.h  mrpt_paths_config.h  version.h
code/mrpt/lidar_SC_client/include/mrpt/hwdrivers/: CHokuyoURG.h
code/mrpt/lidar_SC_client/include/mrpt/nav/holonomic/: CAbstractHolonomicReactiveMethod.h
code/mrpt/lidar_SC_client/lib/: libmrpt-base.so.1.5  libmrpt-detectors.so.1.5  libmrpt-gui.so.1.5  libmrpt-gui.so.1.5.6  libmrpt-hmtslam.so.1.5  libmrpt-hmtslam.so.1.5.6  libmrpt-nav.so.1.5.6  libmrpt-opengl.so.1.5.6  libmrpt-slam.so.1.5  libmrpt-tfest.so.1.5  libmrpt-topography.so.1.5  libmrpt-topography.so.1.5.6  libmrpt-vision.so.1.5.6
code/mrpt/lidar_SC_client/libmrpt/: mrpt.cpp  mrpt.h
code/mrpt/lidar_SC_client/src/lidar_Ho/: CMakeLists.txt  LGlidar.h  icp-slam-live_main.cpp  icp-slam-live_main.cpp.bak  readme
code/mrpt/lidar_SC_client/src/lidar_SC/: CMakeLists.txt  lidar_SC.cpp
code/mrpt/lidar_SC_client/src/socket/: socket_test.cpp
test/socket/: README.md
test/socket/client/: CMakeLists.txt  client.cpp
test/socket/server/: CMakeLists.txt  server.cpp
