CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

#ADD_SUBDIRECTORY(hello)
#ADD_SUBDIRECTORY(test)

#ADD_SUBDIRECTORY(dataprocess) 
#ADD_SUBDIRECTORY(hello)
#ADD_SUBDIRECTORY(sharespace) 
#ADD_SUBDIRECTORY(slam)
#ADD_SUBDIRECTORY(system) 
#ADD_SUBDIRECTORY(sweepstrategy)

#ADD_SUBDIRECTORY(lidar)
#ADD_SUBDIRECTORY(lidar_Ho)
#ADD_SUBDIRECTORY(lidar_SC)
ADD_SUBDIRECTORY(socket)
#ADD_SUBDIRECTORY(OpenRadar_test7.0)
